HBASE-14728 TestRowCounter is broken in master (Abhishek Singh Chouhan)